--- a/presentation-layer/src/App.css
+++ b/presentation-layer/src/App.css
@@ -1,4 +1,6 @@
-.App {
-  text-align: center;
+.main-container{
+  color:#fff;
+  width:100%;
+  height: 100%;
+  background:linear-gradient(to top, black, red 50%, black);
 }
-
