--- a/presentation-layer/src/components/button/Button.css
+++ b/presentation-layer/src/components/button/Button.css
@@ -1,5 +1,5 @@
 :root{
-    --primary: #4628ff;
+    --primary: #49cdcb;
     --warning: #ffd028;
     --danger: #eb3f27;
     --success: #1e8028;
@@ -8,10 +8,11 @@
 }
 
 .btn{
-    border-radius: 15px;
+    border-radius: 10px;
+    margin:10px;
     cursor: pointer;
     font-weight: bold;
-    font-family: 'Century Gothic', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .btn:hover{
@@ -81,3 +82,4 @@
     padding: 15px 30px;
     font-size: 20px;
 }
+
