--- a/presentation-layer/src/containers/GameSetup/GameSetup.css
+++ b/presentation-layer/src/containers/GameSetup/GameSetup.css
@@ -21,12 +21,13 @@
     margin-bottom: 30px;
     font-size: 2em;
     background: #121FCF;
-    background: linear-gradient(to right, #000 60%, #CF1512 40%);
+    background: linear-gradient(to left, #000 14%, #CF1512 75%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 .GameSetup__container h3{
     margin-bottom: 30px;
+    color:#000;
 }
 .GameSetup__difficulty{
     width:100%;
