--- a/presentation-layer/src/components/input/Input.css
+++ b/presentation-layer/src/components/input/Input.css
@@ -1,6 +1,11 @@
 .input{
+    margin-top: 5px;
     padding: 10px 15px;
     width:100%;
+    letter-spacing: 1.5px;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 1px 1px 3px #00000069, -1px -1px 3px #00000069;
 }
 .input::placeholder{
     color:var(--danger)
