add and link all the major pages to one another in readiness for tidying up

--- a/presentation-layer/src/containers/GuessTaking/GuessTaking.css
+++ b/presentation-layer/src/containers/GuessTaking/GuessTaking.css
@@ -16,3 +16,10 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+.GuessTaking__container form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width:55%;
+}
