--- a/presentation-layer/src/components/modal/Modal.css
+++ b/presentation-layer/src/components/modal/Modal.css
@@ -36,15 +36,18 @@
 }
 
 .modal-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width:100%;
     padding:10px;
     padding-left: 7px;
-    height: 80%;
+    height: 75%;
 }
 
 .modal-footer{
     width:100%;
-    height: 10%;
     display: flex;
     justify-content: flex-end;
 }
