feat: add two new classes (GuessGame and Player) to initialize game and create players, respectively

--- a/presentation-layer/src/containers/PlayerRegistration/PlayerRegistration.css
+++ b/presentation-layer/src/containers/PlayerRegistration/PlayerRegistration.css
@@ -13,6 +13,7 @@
 .PlayerReg__heading{
     margin-bottom: 30px;
     background: linear-gradient(to left, #000 19%, #CF1512 75%);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
