--- a/presentation-layer/src/containers/GameSetup/GameSetup.css
+++ b/presentation-layer/src/containers/GameSetup/GameSetup.css
@@ -34,8 +34,8 @@
     margin-bottom: 5px;
     font-weight: 100;
 }
-.difficulty-label{
-    margin-top:30px;
+.GameSetup__item{
+    margin-bottom:15px;
 }
 .GameSetup__container label{
     margin-bottom: 5px;
