feat:add back arrow to GameGuide leading to Home
chore: replace native select with the Select component from react-select

--- a/presentation-layer/src/containers/GameGuide/GameGuide.css
+++ b/presentation-layer/src/containers/GameGuide/GameGuide.css
@@ -30,9 +30,10 @@
     color:#49cdcb;
     font-size: 30px;
     font-weight: bolder;
+    cursor: pointer;
 }
 .back-arrow-wrapper:hover{
     transition:all ease-in-out 0.5s;
-    background-color: #49cdcb;
+    background-color: #255958;
     color:#000;
 }
