refactor: change the background color of number buttons container to black as well as its position from top to bottom
chore: remove the input field and other related parts from GuessTaking page

--- a/presentation-layer/src/containers/GuessTaking/GuessTaking.css
+++ b/presentation-layer/src/containers/GuessTaking/GuessTaking.css
@@ -29,3 +29,12 @@ footer{
     bottom:0;
     right:0;
 }
+
+.next-player-container{
+    height:25%;
+}
+.number-buttons-container{
+    height:65%;
+    background-color: #000;
+    overflow-y: auto;
+}
