--- a/presentation-layer/src/containers/GameMode/GameMode.css
+++ b/presentation-layer/src/containers/GameMode/GameMode.css
@@ -1,15 +1,14 @@
 .GameMode__container{
     height:100%;
     width: 100%;
-    background-color: #eee6e6;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     border-radius: 20px;
     font-family: 'Roboto' sans-serif;
 
 }
+
 .GameMode__heading{
     margin-bottom: 30px;
     background: #121FCF;
@@ -21,6 +20,12 @@
 .GameMode__btn-wrapper{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height:70%;
+    border-bottom-left-radius: 5%;
+    border-bottom-right-radius: 5%;
 }
 .GameMode__text{
     margin-bottom: 30px;
