--- a/presentation-layer/src/containers/PlayerRegistration/PlayerRegistration.css
+++ b/presentation-layer/src/containers/PlayerRegistration/PlayerRegistration.css
@@ -5,20 +5,16 @@
     border-radius: 20px;
     display:flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     color:var(--danger);
     font-weight: bolder;
 }
 
-.PlayerReg__heading{
-    margin-bottom: 30px;
-    background: linear-gradient(to left, #000 19%, #CF1512 75%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-
-}
-.player-entry-wrapper{
-    margin-top: 30px;
+.PlayerReg__body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    height:66%;
 }
