feat: add Menu conponent to replace the absolutely positioned buttons on the home page

--- a/presentation-layer/src/containers/GuessTaking/GuessTaking.css
+++ b/presentation-layer/src/containers/GuessTaking/GuessTaking.css
@@ -85,6 +85,9 @@ footer{
     background-color: var(--primary);
     color: var(--light);
 }
+.swal-title{
+    font-size: 20px;
+}
 
 .swal-text{
     font-weight: bolder;
