--- a/presentation-layer/src/containers/Welcome/Welcome.css
+++ b/presentation-layer/src/containers/Welcome/Welcome.css
@@ -1,5 +1,6 @@
 .Welcome__container{
     position: absolute;
+    padding: 30px 0px;
     top:0;
     left:0;
     background-color:#000;
@@ -16,10 +17,12 @@
     /* margin: 0 auto; */
 }
 .Welcome__heading{
-    font-family: 'Bungee', cursive;
-    font-size:4.3rem;
+    font-family: 'Rubik Bubbles', cursive;
+    font-size:5.0rem;
     letter-spacing: 5px;
+    word-wrap: break-word;
     word-spacing: 3px;
+    text-align: center;
     background: #121FCF;
     background: linear-gradient(to right, #49cdcb 19%, #CF1512 75%);
     -webkit-background-clip: text;
@@ -28,13 +31,13 @@
 }
 
 .Welcome__image{
-    height:50%;
+    height:auto;
     width: 50%;
     max-width: 350px;
     max-height: 300px;
     min-width: 100px;
     min-height: 100px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     border-radius: 50%;
 }
 
@@ -47,7 +50,14 @@
     transform: translateY(-50%);    
 }
 
-@media screen and (min-width:760px){
+@media screen and (min-width:320px) and (max-width:768px){
+    
+    .Welcome__heading{
+        font-size: 6.5rem;
+    }
+}
+
+@media screen and (min-width:600px){
     .action-buttons-wrapper{
         position:absolute;
         flex-direction: row;
@@ -56,5 +66,18 @@
         top:80%;
         bottom:0;
         transform: translateX(50%);   
+    }
+    
+}
+
+@media screen and (min-width:769px){
+    .Welcome__heading{
+        font-size: 8.0rem;
+    }
+}
+
+@media screen and (min-width:1024px){
+    .Welcome__heading{
+        font-size: 10rem;
     }
 }
