--- a/presentation-layer/src/App.css
+++ b/presentation-layer/src/App.css
@@ -13,6 +13,7 @@
   transform: translate(-50%, -50%);
   width:90%;
   height:90%;
+  max-width: 1000px;
   border-radius: 20px;
   box-shadow: 2px 2px 4px red, -2px -2px 4px #49cdcb;
   display: flex;
