--- a/presentation-layer/src/components/input/Input.css
+++ b/presentation-layer/src/components/input/Input.css
@@ -7,6 +7,7 @@
     border: none;
     outline: none;
     box-shadow: 1px 1px 3px #49cdcb, -1px -1px 3px #00000069;
+    max-width: 400px;
 }
 .input::placeholder{
     color:var(--danger)
@@ -14,4 +15,18 @@
 
 .input:focus{
     border: 2px ridge #49cdcb;
+}
+
+.w-80{
+    width:80%;
+}
+
+.w-60{
+    width:60%;
+}
+.w-40{
+    width:40%;
+}
+.w-20{
+    width:20%;
 }
