--- a/presentation-layer/src/containers/PlayerRegistration/PlayerRegistration.css
+++ b/presentation-layer/src/containers/PlayerRegistration/PlayerRegistration.css
@@ -16,5 +16,24 @@
     align-items: center;
     justify-content: center;
     width:100%;
-    height:66%;
+    height:71%;
+}
+.PlayerReg__body-item-1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width:80%;
+}
+.PlayerReg__body-item-1 label{
+    width:80%;
+    max-width: 400px;
+    font-weight: bolder;
+}
+.PlayerReg__body-item-2{
+    display: flex;
+    width:80%;
+    align-items: center;
+    justify-content: center;
+
 }
