--- a/presentation-layer/src/containers/GamePreparation/GamePreparation.css
+++ b/presentation-layer/src/containers/GamePreparation/GamePreparation.css
@@ -1,22 +1,47 @@
 .GamePrep__container{
     height:98%;
     width:98%;
-    background-color: #e8f8f7;
+    /* background-color: #e8f8f7; */
+    background-color: #fff;
     border-radius: 20px;
     display:flex;
     flex-direction: column;
     align-items: center;
     color:var(--danger)
 }
-.GamePrep__heading{
-    margin-bottom: 30px;
-    background: linear-gradient(to left, #000 19%, #CF1512 75%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
 
+.GamePrep__body{
+    width: 100%;
+    height:80%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-footer{
-    position: absolute;
-    bottom:0;
-    right:0;
+
+.GamePrep__image{
+    height:50%;
+    width: 50%;
+    max-width: 300px;
+    max-height: 250px;
+    min-width: 100px;
+    min-height: 100px;
+    border-radius: 50%;
+}
+
+.GamePrep__body-item-1{
+    width: 100%;
+    height:50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.GamePrep__body-item-2{
+    width: 100%;
+    height:50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
