--- a/presentation-layer/src/containers/GamePreparation/GamePreparation.css
+++ b/presentation-layer/src/containers/GamePreparation/GamePreparation.css
@@ -20,8 +20,8 @@
 }
 
 .GamePrep__image{
-    height:50%;
-    width: 50%;
+    height:100%;
+    width: auto;
     max-width: 300px;
     max-height: 250px;
     min-width: 100px;
@@ -35,6 +35,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    /* background-color: red; */
+    padding: 10px 0;
 }
 
 .GamePrep__body-item-2{
@@ -44,4 +46,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color:#000;
+    padding: 10px;
+    /* background-color: blue; */
+    line-height: 1.3;
+}
+
+.GamePrep__body-item-2 p{
+    text-align: center;
+    font-weight: bolder;
 }
