--- a/presentation-layer/src/containers/GamePreparation/GamePreparation.css
+++ b/presentation-layer/src/containers/GamePreparation/GamePreparation.css
@@ -56,3 +56,22 @@
     text-align: center;
     font-weight: bolder;
 }
+
+@media screen and (min-width: 480px) {
+    .GamePrep__body-item-2 p{
+        font-size: 1.7rem;
+    }
+}
+
+@media screen and (min-width: 767px) {
+    .GamePrep__body-item-2 p{
+        font-size: 1.9rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .GamePrep__body-item-2 p{
+        font-size: 2.1rem;
+    }
+}
+
