--- a/presentation-layer/src/containers/GameMode/GameMode.css
+++ b/presentation-layer/src/containers/GameMode/GameMode.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     border-radius: 20px;
-    font-family: 'Roboto' sans-serif;
+    font-family: 'Roboto', sans-serif;
 
 }
 
@@ -24,6 +24,7 @@
     align-items: center;
     width:100%;
     height:70%;
+    font-family: 'Rubik Storm', cursive;
     border-bottom-left-radius: 5%;
     border-bottom-right-radius: 5%;
 }
