--- a/presentation-layer/src/components/header/Header.css
+++ b/presentation-layer/src/components/header/Header.css
@@ -5,11 +5,12 @@ header{
     justify-content: center;
     align-items: center;
     color:#CF1512;
-    border-bottom-left-radius: 50px;
-    border-bottom-right-radius: 50px;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
     font-weight: bolder;
     padding: 0 15px;
     padding-bottom: 5px;
+    font-family: 'Orbitron', sans-serif;
 }
 
 header h1{
