--- a/presentation-layer/src/components/nav/Navigation.css
+++ b/presentation-layer/src/components/nav/Navigation.css
@@ -12,6 +12,9 @@
     justify-content: flex-end;
     align-items: center;
     padding-right: 20px;
+    /* font-family: 'Press Start 2P', cursive; */
+    font-family: 'Creepster', cursive;
+
 }
 .Navigation__wrapper{
     display: flex;
