--- a/presentation-layer/src/containers/GameInfo/GameInfo.css
+++ b/presentation-layer/src/containers/GameInfo/GameInfo.css
@@ -11,10 +11,24 @@
 }
 
 .GameInfo__body{
+    width: 100%;
+    height:70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height:70%;
+}
+
+.GameInfo__wrapper{
+    height: 95%;
+    width:95%;
+    margin-top: 15px;
+    padding: 15px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    /* justify-content: center; */
+    /* align-items: center; */
+    border-radius: 40px;
+    box-shadow: 2px 2px 8px gray, -2px -2px 8px gray;
+    overflow-y: auto;
 }
