--- a/presentation-layer/src/components/card/Card.css
+++ b/presentation-layer/src/components/card/Card.css
@@ -1,17 +1,20 @@
 
 .Card__container{
-    border-bottom: 1px ridge rgb(156, 152, 152);
+    border-top: 1px ridge rgb(47, 44, 44);
     line-height: 1.5;
     padding-left: 3px;
+    padding-top: 3px;
 }
 .Card__container p{
-    color:rgb(36, 34, 34);
+    /* color:rgb(36, 34, 34); */
+    color:#e8f8f7;
  }
 .Card__container p::before{
    content: "~";
-   color:#e8f8f7;
+   /* color:#e8f8f7; */
+   color:#000
 }
 
-.Card__container h5{
+.Card__container h6{
     color: var(--danger)
 }
