--- a/presentation-layer/src/components/input/Input.css
+++ b/presentation-layer/src/components/input/Input.css
@@ -8,6 +8,7 @@
     outline: none;
     box-shadow: 1px 1px 3px #49cdcb, -1px -1px 3px #00000069;
     max-width: 400px;
+    font-size: 13px;
 }
 .input::placeholder{
     color:var(--danger)
