--- a/presentation-layer/src/components/nav/Navigation.css
+++ b/presentation-layer/src/components/nav/Navigation.css
@@ -7,7 +7,7 @@
     border-radius: 20px;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
-    background-color: #0d0d0d;
+    background-color: #040404;
     display:flex;
     justify-content: flex-end;
     align-items: center;
@@ -26,7 +26,9 @@
 .Navigation__wrapper li{
     margin-left: 10px;
     cursor: pointer;
+  
 }
 .Navigation__wrapper li:hover{
     color: #ffffffaf;
+    /* text-decoration: underline; */
 }
