--- a/presentation-layer/src/containers/GameMode/GameMode.css
+++ b/presentation-layer/src/containers/GameMode/GameMode.css
@@ -17,16 +17,25 @@
     -webkit-text-fill-color: transparent;
 
 }
+.GameMode__btn-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height:70%;
+    border-bottom-left-radius: 5%;
+    border-bottom-right-radius: 5%;
+}
+
 .GameMode__btn-wrapper{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width:100%;
-    height:70%;
-    font-family: 'Rubik Storm', cursive;
-    border-bottom-left-radius: 5%;
-    border-bottom-right-radius: 5%;
+    width:95%;
+    height:95%;
+    border-radius: 20px;
+    box-shadow: 2px 2px 4px gray, -2px -2px 4px gray;
 }
 .GameMode__text{
     margin-bottom: 30px;
