--- a/presentation-layer/src/containers/GameSetup/GameSetup.css
+++ b/presentation-layer/src/containers/GameSetup/GameSetup.css
@@ -8,7 +8,6 @@
     align-items: center;
     color:var(--danger);
     overflow-y: auto;
-    font-family: 'Orbitron', sans-serif;
 }
 
 
@@ -18,10 +17,24 @@
     align-items: center;
     width: 100%;
     height:70%;
+    font-family: 'Orbitron', sans-serif;
+}
+
+.GameSetup__wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    height:95%;
+    background-color: black;
+    border-radius: 20px;
+    box-shadow: 2px 2px 4px gray, -2px -2px 4px gray;
+    padding-top:20px;
+    padding-bottom: 20px;
 }
 
 
-.GameSetup__container form{
+.GameSetup__body form{
     display: flex;
     flex-direction: column;
     width:70%;
@@ -37,7 +50,7 @@
 .GameSetup__item{
     margin-bottom:15px;
 }
-.GameSetup__container label{
+.GameSetup__body label{
     margin-bottom: 5px;
     font-weight: bolder;
 }
