feat: add buttons to the Menu component to specify the type of single or multi player game to play

--- a/presentation-layer/src/components/header/Header.css
+++ b/presentation-layer/src/components/header/Header.css
@@ -17,6 +17,7 @@ header h1{
     background: linear-gradient(to right, #49cdcb 14%, #CF1512 75%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    background-clip: text;
     text-align: center;
 }
 
