--- a/presentation-layer/src/containers/GameGuide/GameGuide.css
+++ b/presentation-layer/src/containers/GameGuide/GameGuide.css
@@ -15,6 +15,8 @@
     background: linear-gradient(to left, #000 19%, #CF1512 75%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    background-clip: text;
+
 }
 .back-arrow-wrapper{
     position:absolute;
