--- a/presentation-layer/src/containers/GameSetup/GameSetup.css
+++ b/presentation-layer/src/containers/GameSetup/GameSetup.css
@@ -24,8 +24,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 95%;
-    height:95%;
+    width: 100%;
+    height:100%;
     background-color: black;
     border-radius: 20px;
     box-shadow: 2px 2px 4px gray, -2px -2px 4px gray;
@@ -48,9 +48,10 @@
     font-weight: 100;
 }
 .GameSetup__item{
-    margin-bottom:15px;
+    margin-bottom:5px;
 }
 .GameSetup__body label{
-    margin-bottom: 5px;
+    margin-bottom: 2px;
+    font-size: 1.2rem;
     font-weight: bolder;
 }
