--- a/presentation-layer/src/containers/GamePreparation/GamePreparation.css
+++ b/presentation-layer/src/containers/GamePreparation/GamePreparation.css
@@ -72,6 +72,24 @@
     font-weight: bolder;
 }
 
+.loading{
+    position: absolute;
+    top:0;
+    left:0;
+    color: var(--danger);
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    font-family: 'Orbitron', sans-serif;
+}
+.loading h3{
+    text-align: center;
+}
+
 @media screen and (min-width: 480px) {
     .GamePrep__body-item-2 p{
         font-size: 1.7rem;
