--- a/presentation-layer/src/App.css
+++ b/presentation-layer/src/App.css
@@ -3,6 +3,8 @@
   width:100%;
   height: 100%;
   background:linear-gradient(to top, black, red 50%, black);
+  position: relative
+  
 }
 .App__content__wrapper{
   position: relative;
