chore(enhancement): complete the design of the score table
feat: add close button to the score table

--- a/presentation-layer/src/components/input/Input.css
+++ b/presentation-layer/src/components/input/Input.css
@@ -9,6 +9,8 @@
     box-shadow: 1px 1px 3px #49cdcb, -1px -1px 3px #00000069;
     max-width: 400px;
     font-size: 12px;
+    font-family: 'Orbitron', sans-serif;
+
 }
 .input::placeholder{
     color:var(--danger)
