--- a/presentation-layer/src/components/table/Table.css
+++ b/presentation-layer/src/components/table/Table.css
@@ -1,21 +1,28 @@
-.table-wrapper{
+.table-container{
     width:100%;
     height:100%;
     position:absolute;
     left:0;
     top:0;
-    overflow-x: auto;
     /* display:flex;
     justify-content: center;
     align-items: center; */
-    background:linear-gradient(black, rgba(0,0,0, 0.4));
+    background:linear-gradient(black, rgba(0,0,0, 0.7));
+    font-family: 'Orbitron', sans-serif;
+
+}
+.table-wrapper{
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 30px;
+    overflow: auto;
 }
  .table{
      width:100%;
      border-collapse: collapse;
  }
  thead{
-     background-color: blue
+     background-color: var(--danger)
  }
  th,td{
      border-bottom: 1px #aff solid;
@@ -29,4 +36,9 @@
  td{
      font-weight: 400;
      cursor: pointer;
+ }
+ .table-button-wrapper{
+    margin: 0 auto;
+    width: 80%;
+    text-align: center;
  }
