--- a/presentation-layer/src/components/table/Table.css
+++ b/presentation-layer/src/components/table/Table.css
@@ -9,6 +9,7 @@
     align-items: center; */
     background:linear-gradient(black, rgba(0,0,0, 0.7));
     font-family: 'Orbitron', sans-serif;
+    font-size: 0.9rem;
 
 }
 .table-wrapper{
@@ -16,6 +17,7 @@
     margin: 0 auto;
     margin-top: 30px;
     overflow: auto;
+    max-width: 500px;
 }
  .table{
      width:100%;
