--- a/presentation-layer/src/containers/GuessTaking/GuessTaking.css
+++ b/presentation-layer/src/containers/GuessTaking/GuessTaking.css
@@ -9,6 +9,8 @@
     align-items: center;
     color:var(--danger);
     max-width: 1152px;
+    font-family: 'Orbitron', sans-serif;
+
 }
 
 .GuessTaking__image{
@@ -34,7 +36,7 @@
     display:flex;
     flex-direction: column;
     overflow-y: auto;
-    font-size: 1.1rem;
+    font-size: 0.9rem;
  
 }
 .next-player-wrapper{
@@ -64,8 +66,9 @@
     display:flex;
     height: 30%;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     padding:10px 0;
+    font-weight: bolder;
     /* background-color: blue; */
 
 }
