--- a/presentation-layer/src/containers/GamePreparation/GamePreparation.css
+++ b/presentation-layer/src/containers/GamePreparation/GamePreparation.css
@@ -42,7 +42,7 @@
 
 .GamePrep__body-item-1{
     width: 100%;
-    height:50%;
+    height:45%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -52,7 +52,7 @@
 
 .GamePrep__body-item-2{
     width: 100%;
-    height:50%;
+    height:55%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -60,7 +60,7 @@
     color: var(--light);
     padding: 10px;
     background-color: #000;
-    line-height: 1.3;
+    line-height: 1.4;
 
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -70,6 +70,7 @@
 .GamePrep__body-item-2 p{
     text-align: center;
     font-weight: bolder;
+    font-size: 1.4rem;
 }
 
 
