--- a/presentation-layer/src/containers/GuessTaking/GuessTaking.css
+++ b/presentation-layer/src/containers/GuessTaking/GuessTaking.css
@@ -36,7 +36,7 @@
     display:flex;
     flex-direction: column;
     overflow-y: auto;
-    font-size: 0.9rem;
+    font-size: 1.0rem;
  
 }
 .next-player-wrapper{
@@ -65,7 +65,7 @@
 .next-player-item-3{
     display:flex;
     height: 30%;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-evenly;
     padding:10px 0;
     font-weight: bolder;
@@ -143,7 +143,8 @@
         height: 100%;
         width:30%;
         flex-direction: column;
-    
+        border-left: 1.5px solid rgb(226, 222, 222);
+        padding-left: 4px;
     }
   
 }
