chore: enhance the error alert modal

--- a/presentation-layer/src/components/input/Input.css
+++ b/presentation-layer/src/components/input/Input.css
@@ -13,7 +13,9 @@
 
 }
 .input::placeholder{
-    color:var(--danger)
+    color:var(--danger);
+    font-weight: bolder;
+    font-size:0.8rem
 }
 
 .input:focus{
