chore: make confetti to appear on necessary page and increase the opacity when a player wins

--- a/presentation-layer/src/App.css
+++ b/presentation-layer/src/App.css
@@ -24,3 +24,11 @@
   align-items: center;
 }
 
+/* @media screen and (orientation: landscape) {
+  .App__content__wrapper{
+   
+    max-width: 500px;
+    
+  }
+} */
+
