--- a/presentation-layer/src/components/nav/Navigation.css
+++ b/presentation-layer/src/components/nav/Navigation.css
@@ -50,3 +50,12 @@
   
 }
 
+/* @media screen and (orientation: landscape) {
+
+    .Navigation__wrapper li{
+        
+        font-size: 1.2rem;
+      
+    }
+  } */
+
