--- a/presentation-layer/src/components/header/Header.css
+++ b/presentation-layer/src/components/header/Header.css
@@ -70,3 +70,12 @@ header h4{
     }
 }
 
+/* @media screen and (orientation:landscape) {
+    header h1{
+        font-size: 1.5rem;
+      }
+    header h4{
+        font-size: 1.1rem;
+    }
+} */
+
