--- a/presentation-layer/src/containers/GamePreparation/GamePreparation.css
+++ b/presentation-layer/src/containers/GamePreparation/GamePreparation.css
@@ -96,3 +96,13 @@
     }
 }
 
+/* @media screen and (orientation: landscape){
+    .GamePrep__body-item-2 p{
+        font-size: 1.1rem;
+    }
+    .GamePrep__body-item-2 {
+        padding-top: 30px;
+    }
+}
+ */
+
