--- a/presentation-layer/src/components/button/Button.css
+++ b/presentation-layer/src/components/button/Button.css
@@ -1,11 +1,3 @@
-:root{
-    --primary: #49cdcb;
-    --warning: #ffd028;
-    --danger: #eb3f27;
-    --success: #1e8028;
-    --dark: #181717;
-    --light: #fdfdfd;
-}
 
 .btn{
     border-radius: 10px;
@@ -105,7 +97,7 @@
 }
 
 .w-10{
-    /* width: 10%; */
+    width: ""
 }
 
 .w-5{
