refactor: customize the display messages for session game based on the outcoe of the session
feat: add findWinner button to find winners for tied players

--- a/presentation-layer/src/containers/GuessTaking/GuessTaking.css
+++ b/presentation-layer/src/containers/GuessTaking/GuessTaking.css
@@ -104,6 +104,11 @@
     color: var(--light);
 }
 
+.swal-button--findWinner{
+    background: linear-gradient(to left, var(--warning), black, var(--warning));
+    color: var(--light);
+}
+
 .swal-button--continue{
     background: linear-gradient(to left, var(--primary), black, var(--primary));
     color: var(--light);
